add htm to galer

--- a/task-2.html
+++ b/task-2.html
@@ -10,8 +10,12 @@
   <body>
     <p><a href="./index.html">Go back</a></p>
 
-    <ul class="gallery"></ul>
-
+    <ul class="gallery">
+      <li class="gallery-item"><img src="https://images.pexels.com/photos/140134/pexels-photo-140134.jpeg?dpr=2&h=750&w=1260" alt="White and Black Long Fur Cat" class="gallery-image"></li>
+  <li class="gallery-item"><img src="https://images.pexels.com/photos/213399/pexels-photo-213399.jpeg?dpr=2&h=750&w=1260" alt="Orange and White Koi Fish Near Yellow Koi Fish" class="gallery-image"></li>
+  <li class="gallery-item"><img src="https://images.pexels.com/photos/219943/pexels-photo-219943.jpeg?dpr=2&h=750&w=1260" alt="Group of Horses Running" class="gallery-image"></li>
+    </ul>
+    
     <script src="./js/task-2.js" type="module"></script>
   </body>
 </html>
